-noverify is no more needed! :) Removed EntityList support.